# BICEPS

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.txt  index.html
libs/: CMakeLists.txt
libs/directag/: CMakeLists.txt  README.GCC  README.MSVC8
libs/directag/directag/: CHANGELOG  CMakeLists.txt  directag.cpp  directag.h  directagConfig.h  directagSpectrum.cpp  directagSpectrum.h
libs/directag/ext/src/expat-2.0.1/: CMakeLists.txt
libs/directag/ext/src/expat-2.0.1/conftools/: ac_c_bigendian_cross.m4  mkinstalldirs
libs/directag/ext/src/expat-2.0.1/lib/: CMakeLists.txt
libs/directag/freicore/: BaseRunTimeConfig.cpp  BaseRunTimeConfig.h  BaseSpectrum.cpp  BaseSpectrum.h  CMakeLists.txt  CharIndexedVector.h  Histogram.h  PeakSpectrum.h  Profiler.h  ResidueMap.h  SearchSpectrum.cpp  SearchSpectrum.h  SequestRunTimeConfig.h  SimpleXMLWriter.h  base64.cpp  base64.h  constants.cpp  constants.h  expat_xml.h  freicore.cpp  freicore.h  lnFactorialTable.h  pepXmlTypes.h  proteinStore.cpp  proteinStore.h  searchResult.h  shared_defs.cpp  shared_defs.h  shared_funcs.cpp  shared_funcs.h  shared_types.h  simplethreads.h  stdafx.cpp  stdafx.h  tagsFile.cpp  tagsFile.h  topset.h
libs/directag/pwiz-src/libraries/: CMakeLists.txt
libs/directag/pwiz-src/libraries/zlib/: CMakeLists.txt  crc32.c  deflate.h  zutil.h
libs/directag/pwiz-src/libraries/zlib-1.2.3/: CMakeLists.txt  adler32.c  deflate.c  minigzip.c  trees.c  uncompr.c  zconf.h
libs/directag/pwiz-src/libraries/zlibarfw/: CMakeLists.txt
libs/directag/pwiz-src/libraries/zlibarfw/zlib-boost/: CMakeLists.txt
libs/directag/pwiz-src/pwiz/: CMakeLists.txt  pwiz.sln  pwiz.vcproj
libs/directag/pwiz-src/pwiz/analysis/: CMakeLists.txt
libs/directag/pwiz-src/pwiz/analysis/frequency/: DerivativeTest.hpp  FrequencyEstimator.hpp  FrequencyEstimatorPhysicalModel.hpp  FrequencyEstimatorSimple.hpp  MagnitudeLorentzian.hpp  ParameterEstimator.hpp  ParametrizedFunction.hpp  PeakDetector.hpp  PeakDetectorMatchedFilter.hpp  PeakDetectorNaive.hpp  TruncatedLorentzian.hpp  TruncatedLorentzianEstimator.hpp  TruncatedLorentzianParameters.hpp
libs/directag/pwiz-src/pwiz/analysis/passive/: MSDataAnalyzer.hpp  MSDataAnalyzerApplication.hpp  MSDataCache.hpp  MetadataReporter.hpp  Pseudo2DGel.hpp  RegionAnalyzer.hpp  RegionSIC.hpp  RegionSlice.hpp  RegionTIC.hpp  SpectrumBinaryData.hpp  SpectrumInfo.hpp  SpectrumTable.hpp
libs/directag/pwiz-src/pwiz/analysis/peakdetect/: PeakDetector.cpp  PeakDetector.hpp  PeakFamilyDetector.cpp  PeakFamilyDetector.hpp  PeakFamilyDetectorFT.cpp  PeakFamilyDetectorFT.hpp
libs/directag/pwiz-src/pwiz/analysis/peptideid/: PeptideID.hpp  PeptideIDMap.cpp  PeptideIDMap.hpp  PeptideIDMapTest.cpp
libs/directag/pwiz-src/pwiz/analysis/spectrum_processing/: CMakeLists.txt  SavitzkyGolaySmootherTest.cpp  SpectrumListWrapperTest.cpp
libs/directag/pwiz-src/pwiz/data/: CMakeLists.txt
libs/directag/pwiz-src/pwiz/data/misc/: CalibrationParameters.hpp  CalibrationParametersTest.cpp  FrequencyData.cpp  FrequencyData.hpp  FrequencyDataTest.cpp  FrequencyDataTestData.cpp  FrequencyDataTestData.hpp  PeakData.hpp  PeakDataTest.cpp  SampleDatum.hpp  TransientData.cpp  TransientData.hpp  TransientDataTest.cpp  scoped_array.hpp
libs/directag/pwiz-src/pwiz/data/msdata/: CMakeLists.txt  CVTranslator.cpp  CVTranslator.hpp  ChromatogramList_mzML.cpp  ChromatogramList_mzML_Test.cpp  DefaultReaderList.cpp  DefaultReaderList.hpp  Diff.cpp  DiffTest.cpp  IO.cpp  IOTest.cpp  LegacyAdapter.cpp  LegacyAdapter.hpp  MSDataFile.cpp  MSDataFile.hpp  MSDataFileTest.cpp.backup  RAMPAdapter.cpp  RAMPAdapter.hpp  RAMPAdapterTest.cpp  Reader.cpp  Reader.hpp  References.cpp  SHA1OutputObserver.hpp  Serializer_mzML.cpp  Serializer_mzML.hpp  Serializer_mzML_Test.cpp  Serializer_mzXML.cpp  Serializer_mzXML.hpp  Serializer_mzXML_Test.cpp  SpectrumIterator.cpp  SpectrumListFilter.cpp  SpectrumListFilter.hpp  SpectrumList_mzML.cpp  SpectrumList_mzXML.cpp  SpectrumList_mzXML_Test.cpp  cv.hpp  cvgen.cpp  (+3 more)
libs/directag/pwiz-src/pwiz/utility/: CMakeLists.txt
libs/gmm-bic/: CMakeLists.txt  gmm-bic.cpp  gmm-bic.h
libs/pepnovo/: AdvancedScoreModel.cpp  AdvancedScoreModel.h  AdvancedScoreModel_fill.cpp  AdvancedScoreModel_frag.cpp  AdvancedScoreModel_regional.cpp  AminoAcidProbs.cpp  AminoAcidProbs.h  AnnotatedSpectrum.cpp  AnnotatedSpectrum.h  BasicDataStructs.cpp  BasicDataStructs.h  CMakeLists.txt  Config.cpp  Config.h  Config.h.cmake  ConversionTables.cpp  ConversionTables.h  DeNovoDp.cpp  DeNovoDp.h  DeNovoPartModel.cpp  DeNovoRankModel.h  DeNovoRankScore.cpp  DeNovoRankScore.h  DeNovoRankTrain.cpp  DeNovoRank_main.cpp  DeNovoSolutions.cpp  DeNovoSolutions.h  DiscretePeakModel.cpp  DiscretePeakModel.h  EdgeModel.cpp  EdgeModel.h  FileManagement.cpp  FileManagement.h  FragProbTable.cpp  FragProbTable.h  FragmentSelection.cpp  FragmentSelection.h  Fragmentation.cpp  Fragmentation.h  Isotopes.cpp  (+53 more)
libs/pepsplice/: BestMatches.cpp  BestMatches.h  CMakeLists.txt  Chromosome.cpp  Chromosome.h  Chromosomes.cpp  Chromosomes.h  Distribution.cpp  Distribution.h  DnaAA.cpp  DnaAA.h  HotSpectra.cpp  HotSpectra.h  HotSpots.cpp  HotSpots.h  Hypergeometric.cpp  Hypergeometric.h  Match.cpp  Match.h  MatchComparator.h  Peak.cpp  Peak.h  PeakComparator.h  PeptideConfidenceComparator.h  Protein.cpp  Protein.h  ProteinConfidenceComparator.h  ProteinParser.cpp  ProteinParser.h  README  Results.cpp  Results.h  ResultsPattern.cpp  ResultsPattern.h  Scoring.cpp  Scoring.h  Services.cpp  Services.h  SlidingWindow.cpp  SlidingWindow.h  (+19 more)
libs/zlib/: CMakeLists.txt  ChangeLog  compress.c  example.c  gzio.c  minigzip  zconf.in.h  zutil.c
libs/zlib/contrib/ada/: buffer_demo.adb  read.adb  test.adb  zlib-streams.adb  zlib-streams.ads  zlib-thin.adb  zlib-thin.ads  zlib.adb  zlib.ads
libs/zlib/projects/visualc6/: example.vcproj  minigzip.vcproj
libs/zlib/zlib-boost/: CMakeLists.txt  zlibdummy.cpp
src/: CMakeLists.txt  CommandParser.cpp  CommandParser.h  Definitions.h  biceps.cpp  biceps.h  commandparser.cpp  commandparser.h  ets.cpp  ets.h  fasta.cpp  fasta.h  main.cpp
(+241 files in other folders)
